# mephi_dozen

./: .gitignore  CMakeLists.txt
2a/structs/: list.h  structs.h
2a/structs/source/classes/: cycleQueue.c
2a/structs/source/list/: cycleList.h
2a/task/: task.h
3a/: main.c
3a/file_worker/: manager.h
3a/menu/: classic_menu.c  classic_menu.h
3b/: main.c
3b/menu/: classic_menu.c
3c/: methods.h
3c/menu/: classic_menu.c
3d/: methods.c
3d/file_worker/: manager.h
3d/menu/: classic_menu.h
4a/: methods.c
4a/menu/: classic_menu.c
4a/tree/: tree.h
4b/: methods.c
4b/menu/: classic_menu.c  classic_menu.h
4b/tree/: tree.c
5/: main.c  methods.h
5/graph/: graph.c
5/menu/: classic_menu.c  classic_menu.h
lab1/: compile  file.c  main.c
lab2/: compil1  compil2  file2.c
lab2/task/: input.h
lab3/: compil  list_class.c  list_class.h  main.c
lab3/file_worker/: manager.c
lab3/menu/: classic_menu.c
lab3/table/: table.c
lab3a/: methods.c  methods.h
lab3a/table/: table.h
lab3d/: main.c
lab3d/table/: table.c  table.h
lab3с/: methods.c
lab3с/table/: table.c  table.h
lab4/: main.c  main2.c  methods.c  methods.h
lab4a/: main.c  methods.c  methods.h
lab4a/menu/: classic_menu.c  classic_menu.h
lab4a/tree/: tree.c  tree.h
lab4b/: main.c  methods.c  methods.h
lab4b/menu/: classic_menu.c
lab4b/tree/: tree.c  tree.h
lab5/: file.txt  input.txt  main.c  main2.c  methods.c  methods.h  output.txt  try.txt  voter.c  voter.h
lab5/algorthm/: search.c  search.h
lab5/graph/: graph.c  graph.h
lab5/menu/: classic_menu.c  classic_menu.h
lab6/: main.c  struct.c  struct.h
new_lab5/: abonent.c  abonent.h  file_worker.c  file_worker.h  input.txt  main.c  main2.c  methods.c  methods.h  output.txt
sem1/lab2/: file1.c
sem1/lab3/: list_class.c  list_class.h
sem1/lab4/: main.c  methods.c
sem1/lab5/: main.c
sem2/lab1/: main.c
sem2/lab2/: main.c
sem2/lab2/structs/: cycleQueue.c  cycleQueue.h  list.c  list.h  structs.c  structs.h  task.h
sem2/lab2/structs/source/classes/: cycleQueue.c  listQueue.c  structs.c
sem2/lab2/structs/source/list/: arrayList.c  arrayList.h  cycleList.c  cycleList.h  doubleList.c  doubleList.h
sem2/lab2/task/: input.c  input.h  task.c  task.h
sem2/lab3/: main.c  methods.c  methods.h
sem2/lab3/file_worker/: manager.c  manager.h  removal_list.h
sem2/lab3/menu/: classic_menu.c  classic_menu.h  menu.c
sem2/lab3/table/: table.c  table.h
sem2/lab3cd/: methods.c
sem2/lab3cd/table/: table.c
sem2/lab3d/: main.c  methods.c  methods.h
sem2/lab3d/file_worker/: manager.c
sem2/lab3d/menu/: classic_menu.c
sem2/lab3d/table/: table.c
sem2/lab3с/: main.c
test/: compil  file  file.c  test.c
